# PrimordialParticleSystem

./: .gitignore  CMakeLists.txt  LICENSE
PPS/: CMakeLists.txt  README.md
PPS/include/PPS/: PrimordialParticle.hpp  PrimordialParticleSystem.hpp
PPS/src/: PrimordialParticle.cpp  PrimordialParticleSystem.cpp
app/: CMakeLists.txt  config.hpp  main.cpp
